fix: degrade web startup without disabling plugin